# ChangeLog for sys-process/procenv
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-process/procenv/ChangeLog,v 1.5 2012/11/29 08:26:42 radhermit Exp $

  29 Nov 2012; Tim Harder <radhermit@gentoo.org> -procenv-0.8.ebuild,
  -procenv-0.12.ebuild:
  Remove old.

*procenv-0.15 (29 Nov 2012)

  29 Nov 2012; Tim Harder <radhermit@gentoo.org> +procenv-0.15.ebuild:
  Version bump.

*procenv-0.13 (27 Nov 2012)

  27 Nov 2012; Tim Harder <radhermit@gentoo.org> +procenv-0.13.ebuild:
  Version bump.

*procenv-0.12 (23 Nov 2012)

  23 Nov 2012; Tim Harder <radhermit@gentoo.org> +procenv-0.12.ebuild:
  Version bump.

*procenv-0.8 (17 Nov 2012)

  17 Nov 2012; Tim Harder <radhermit@gentoo.org> +procenv-0.8.ebuild,
  +metadata.xml:
  Initial import, ebuild by me.
