@@ -3,18 +3,20 @@ Hash: SHA256
 
 DIST procenv-0.13.tar.gz 206491 SHA256 38414f49b0ee3ba54130cc9727c832bbdcb828a4c7fe9277d07bd454a8cf8603 SHA512 446665982ba49bad3bf82451fb8587e3cc8d2b70189ea36a1568e90a77b2625a4d3c2ebab8aa9596ba0e92495217a2431d5047b493dbdd4413a24aaf79b4fd9b WHIRLPOOL 2a5c393c17a2fd4615b577623eabb81b134f1dcd8c259d64985720fb77d6da22d2601061d351a65d5ea4f1f5ffc3bc55f56c8b2db7eaf407f6064cd350f62ed1
 DIST procenv-0.15.tar.gz 206537 SHA256 eba6f5aa0dcc8de7d5543096bcb66a83d2f84cc10b462a77b0b98d714f10ebf3 SHA512 8dd57864285346d12f1b6d758b7ea48aa1ce863b470af92d58f5c314a4bdad0356245056d9a47796e333f10de3db00739bc09fc87106dfd751af4f0444e61e85 WHIRLPOOL f31570069cbec1fd1e4b6ab40855c01a3edfcf9ee2f624da06f72e9a397fee3d986344dc8258cbcbc2cb26de89dcb3d9e710cd8869f70cf039dc11a2fbf6b273
+DIST procenv-0.16.tar.gz 209888 SHA256 d22369d60b1e29766e5f8017eaca270efedfefa3d815813b464374467250d6d7 SHA512 2910935dd6efd26426f2ad17b83cb1d48f04a4f1d94aac3687d1bfc28db8126945d6d5368f656c42f95d01b3cca2aee8fe05586e2856d2a1d71d8426d3d7dda9 WHIRLPOOL b7de23704c954dde76baf43bbccabab78fdca28ad767da1e0ccdf57c438acb64c9677467e91d990919af479304c0c7e3df8b8b17b9332d32b0c9d8f52c97b3d3
 EBUILD procenv-0.13.ebuild 543 SHA256 1c65feb9c40a3def2acaf2929f8b20e4d0479de2ef2e0bec7dd263888e2a5f52 SHA512 d32d3f91c4e7ffd01bccea0752d1c71c5291a386788b68bc14f0c7e8def25d776e1643412c22c9cf6a5e3b1c7d7ae580b36d8ecaeb10c59d3b031bf118072f84 WHIRLPOOL 08b46ee91da619d86d47f15d4600dbe23f90e085850016a65cd4ed3cd860c071332d344ecb63431cb32af9fd6cd86fcaa923d82d3660382c37c5cc48bdf4e6ee
 EBUILD procenv-0.15.ebuild 543 SHA256 f5a9aa551e60769a14f9789e72780d90a9a75888ce407ef44481e276575172da SHA512 5a6b08b64ecad057cd05d22b9b5947f57ec00badf699beb2841fb0462e836d4ec2ac72dac06ad6d99ae2cd36881d03d8ba4877f636cb1557d231802d3044b9da WHIRLPOOL cdc9c5ea7a5165438f96ae99034de5a69c5501aa30a7010f0deed79702d5fe93b567a325bb950947f7fffed37dffbfbaaef8e32ccadf61be1b8a017150e301d2
-MISC ChangeLog 822 SHA256 44a49cae50fff4cc3d679a537b444257c4f1dc7f692354dcd304b6d6b118aca0 SHA512 6f6b66817380ff1b2c2381f391197531e8177e1a051e501f6a2fc64a9c4fbd87d5b2dec0c0e22358db02de81cadb3689f9ef8bfb581d9102d556d3b267f3fc36 WHIRLPOOL 9b0d53a381a01258066e64eb9e514b25c461af45d79e50cb2ec4e544cd5a991472207b12f70db91942d120cd811e789f22357196da280378520f7910faa50723
+EBUILD procenv-0.16.ebuild 543 SHA256 2e331ac6663e2da4a65fc93ce6d559d91fc7cbb8965e8fc38a5ce6d6738774f8 SHA512 98a0081abdd0efba0b3fcb3b83a634bd6cea8a68a800bd94847cb06b2f1f0a621fe9e255a8c27a36c0ab9829694d5636b07fdf67b835b74b4233143702b831bc WHIRLPOOL 308c8697697217c460f58316415142e3651905c6a7da600a4b47294cf1d6578828ef6c82213f4c5b3acc4eb9cfbf4aa11b4c8a91265630c5f2474f120d64f674
+MISC ChangeLog 939 SHA256 8a3189b4ae1abcefce13fc29ed95c63cdc8b5d5f64a3c3ca0daa1bdf429b8bc2 SHA512 fa24d22b380e7f10f3de91cef1ce4dbd4b819e572dd3ff4bf97759de6c70d960d04837aea40a30f9ca55c6e21a6dad1224441301163c07610d0324a38e1299b6 WHIRLPOOL 6e5a01a0507a469579abdd93b44ffbf55439a58cf40c41fb2409a9f02b783fa7140164fdb9f5ebf636b9794edbb5baf0eb07968f118998bbe7bf506bebfb4435
 MISC metadata.xml 232 SHA256 a778e40f66cb2fa35529e4f45cb8356c8b1b109163cd939396f02e8ea6aa5f1a SHA512 6952f63da1c92a4ed7ddb87b5eb4003d123f0b7af6ffdbc9118159c97ddf18917e8ac7727285a42c07c64e52a40335bc2ef9f17261557617beb8c2226a391873 WHIRLPOOL 0a4441f075f8af01588da2aac3e03732f93463b8bea5e46749d37e1468452735d15f45243b930b3346c93734f8aa235a492030445fee471a95d2c5998f08e7de
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQtxxDAAoJEEqz6FtPBkyjySMH/ibczFF2+WXJUJ8boiHX5TsY
-VyASWskbhN4e1PvMNOwjoiQoIisMif/LXutrdniWM+mK3bR1CGyPhUYuP16HHsFy
-QZaihkLolufAKnr0mGA/iQXPbnFkOCI2CXGbFEmaLklQZN1LeVdUdtCsMwG0jjP4
-v2fEVGP8xnM3JpzOZtJBjI17/ilNoXEiOLfZofJ+R6Mw02DSQsVfVM3RC0vKytvC
-5RAyRuj4QWM+V8Fpr5x5R9IyBywhGXs7GPWP09+B8j05dhmlTa7Ll42w6CoEyyZy
-D0QD8Z+jCSjeqeECXZCbV0e+b2v9PFyzgcSmKsyFrKgZ9JACF7YUF9NIkiRzLUg=
-=gY1J
+iQEcBAEBCAAGBQJQvBqCAAoJEEqz6FtPBkyjpDsH+gKrz9E7jvMS01jqfFXu1zW4
+EXGOafvXF6OoohAPgobqzRKg7Fj3zxpbynuBGFjP3RzUssZbxbsda5UJpDRqyCbk
+bce+RFMDG9iP0SmKuLSiUzZ7A50Qn7fWp8nXun04pCdtU/e01G1m5BX20qYIXRsE
+E2z+AUXMtuA0KRibcT59dEVmsVQN2R7nwbxwWh9oQKduKSZDcJIfw5mQCdv3Z5ML
+CoPOkDX6KhoL+Bs52UNM84HLQVm2nCK1TTLMB1uy1lRpQjIOLVAEbDXbY3ddMdK/
+i49+b7mwsjkd8XDdp6JoPyAaonpEi3ayANPqPNk8ppq/RfduXcmbnFM1+mR1XO8=
+=rpGw
 -----END PGP SIGNATURE-----
