@@ -1,6 +1,11 @@
 # ChangeLog for sys-process/procenv
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/procenv/ChangeLog,v 1.5 2012/11/29 08:26:42 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/procenv/ChangeLog,v 1.6 2012/12/03 03:20:33 radhermit Exp $
+
+*procenv-0.16 (03 Dec 2012)
+
+  03 Dec 2012; Tim Harder <radhermit@gentoo.org> +procenv-0.16.ebuild:
+  Version bump.
 
   29 Nov 2012; Tim Harder <radhermit@gentoo.org> -procenv-0.8.ebuild,
   -procenv-0.12.ebuild:
